--- a/erorr.html
+++ b/erorr.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Still working</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="error-img">
