--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Mas Información</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <h1 class="h1tyc">FoodToGo: Comida Casera a Tu Alcance</h1>
     <div class="txt">
