Etiqueta faltante <body> y format de líneas.

--- a/info.html
+++ b/info.html
@@ -3,38 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mas Información</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <h1 class="h1tyc">FoodToGo: Comida Casera a Tu Alcance</h1>
+  <body>
+    <h1 class="h1tyc">FoodToGo: Comida Casera a Tu Alcance</h1>
     <div class="txt">
       <p>Sobre Nosotros</p>
-      <p>En FoodToGo, nos apasiona ofrecer comida casera deliciosa y nutritiva para satisfacer tus antojos culinarios diarios. Nuestro equipo de chefs expertos utiliza ingredientes frescos y de alta calidad para preparar cada plato con amor y cuidado, para que disfrutes de una experiencia gastronómica excepcional en la comodidad de tu hogar u oficina.</p>
+      <p>
+        En FoodToGo, nos apasiona ofrecer comida casera deliciosa y nutritiva
+        para satisfacer tus antojos culinarios diarios. Nuestro equipo de chefs
+        expertos utiliza ingredientes frescos y de alta calidad para preparar
+        cada plato con amor y cuidado, para que disfrutes de una experiencia
+        gastronómica excepcional en la comodidad de tu hogar u oficina.
+      </p>
 
-    <p>  Nuestra Misión</p>
-     <p> Nuestra misión es proporcionarte convenientemente alimentos caseros saludables y deliciosos que se adapten a tu estilo de vida ocupado. Creemos en la importancia de la alimentación balanceada y en cómo una buena comida puede alegrar tu día y mejorar tu bienestar general.</p>
+      <p>Nuestra Misión</p>
+      <p>
+        Nuestra misión es proporcionarte convenientemente alimentos caseros
+        saludables y deliciosos que se adapten a tu estilo de vida ocupado.
+        Creemos en la importancia de la alimentación balanceada y en cómo una
+        buena comida puede alegrar tu día y mejorar tu bienestar general.
+      </p>
 
-   <p>   Nuestro Menú</p>
-     <p> Ofrecemos una amplia variedad de platos caseros, desde clásicos reconfortantes hasta opciones más innovadoras y saludables. Ya sea que prefieras la cocina tradicional o estés buscando opciones vegetarianas, veganas o sin gluten, en FoodToGo tenemos algo para todos los gustos y necesidades dietéticas.</p>
+      <p>Nuestro Menú</p>
+      <p>
+        Ofrecemos una amplia variedad de platos caseros, desde clásicos
+        reconfortantes hasta opciones más innovadoras y saludables. Ya sea que
+        prefieras la cocina tradicional o estés buscando opciones vegetarianas,
+        veganas o sin gluten, en FoodToGo tenemos algo para todos los gustos y
+        necesidades dietéticas.
+      </p>
 
-   <p>   Cómo Funciona</p>
-     <p> Nuestro proceso de pedido es rápido y sencillo. Simplemente selecciona tus platos favoritos de nuestro menú en línea, elige la cantidad y realiza tu pedido. Nos encargaremos de preparar tu comida con esmero y te la entregaremos en la puerta de tu casa u oficina, listo para que disfrutes.</p>
+      <p>Cómo Funciona</p>
+      <p>
+        Nuestro proceso de pedido es rápido y sencillo. Simplemente selecciona
+        tus platos favoritos de nuestro menú en línea, elige la cantidad y
+        realiza tu pedido. Nos encargaremos de preparar tu comida con esmero y
+        te la entregaremos en la puerta de tu casa u oficina, listo para que
+        disfrutes.
+      </p>
 
-    <p>  Compromiso con la Calidad</p>
-      <p>En FoodToGo, nos comprometemos a ofrecerte la más alta calidad en cada plato que servimos. Trabajamos con proveedores de confianza para garantizar la frescura y la calidad de nuestros ingredientes, y seguimos estrictas normas de higiene y seguridad alimentaria en todas las etapas de preparación y entrega de nuestros productos.</p>
+      <p>Compromiso con la Calidad</p>
+      <p>
+        En FoodToGo, nos comprometemos a ofrecerte la más alta calidad en cada
+        plato que servimos. Trabajamos con proveedores de confianza para
+        garantizar la frescura y la calidad de nuestros ingredientes, y seguimos
+        estrictas normas de higiene y seguridad alimentaria en todas las etapas
+        de preparación y entrega de nuestros productos.
+      </p>
 
-    <p>  Contáctanos</p>
-     <p> Si tienes alguna pregunta sobre nuestro servicio o deseas realizar un pedido personalizado, no dudes en ponerte en contacto con nuestro equipo de atención al cliente. Estamos aquí para ayudarte y asegurarnos de que tu experiencia con FoodToGo sea excepcional en todo momento.</p>
+      <p>Contáctanos</p>
+      <p>
+        Si tienes alguna pregunta sobre nuestro servicio o deseas realizar un
+        pedido personalizado, no dudes en ponerte en contacto con nuestro equipo
+        de atención al cliente. Estamos aquí para ayudarte y asegurarnos de que
+        tu experiencia con FoodToGo sea excepcional en todo momento.
+      </p>
 
-   <p>   ¡Gracias por elegir FoodToGo para satisfacer tus antojos de comida casera!</p>
+      <p>
+        ¡Gracias por elegir FoodToGo para satisfacer tus antojos de comida
+        casera!
+      </p>
     </div>
-  <a href="index.html" class="non-link">Volver al inicio</a>
+    <a href="index.html" class="non-link">Volver al inicio</a>
   </body>
   <footer class="footer">
-    Al utilizar nuestros servicios, usted acepta estos términos y condiciones en su totalidad.
+    Al utilizar nuestros servicios, usted acepta estos términos y condiciones en
+    su totalidad.
   </footer>
 </html>
