Agregué "./" para que importe bien las imágenes

--- a/compras.html
+++ b/compras.html
@@ -69,7 +69,7 @@
     <div class="container-items">
       <div class="item">
         <figure>
-          <img src="images/D02.png" alt="producto" />
+          <img src="./images/D02.png" alt="producto" />
         </figure>
         <div class="info-product">
           <h2>Huevos perico</h2>
@@ -79,7 +79,7 @@
       </div>
       <div class="item">
         <figure>
-          <img src="images/food1.png" alt="producto" />
+          <img src="./images/food1.png" alt="producto" />
         </figure>
         <div class="info-product">
           <h2>HamburGruesa</h2>
@@ -89,7 +89,7 @@
       </div>
       <div class="item">
         <figure>
-          <img src="images/food2.png" alt="producto" />
+          <img src="./images/food2.png" alt="producto" />
         </figure>
         <div class="info-product">
           <h2>Tren bala</h2>
@@ -99,7 +99,7 @@
       </div>
       <div class="item">
         <figure>
-          <img src="images/food4.png" alt="producto" />
+          <img src="./images/food4.png" alt="producto" />
         </figure>
         <div class="info-product">
           <h2>Mixto</h2>
@@ -109,7 +109,7 @@
       </div>
       <div class="item">
         <figure>
-          <img src="images/food5.png" alt="producto" />
+          <img src="./images/food5.png" alt="producto" />
         </figure>
         <div class="info-product">
           <h2>Vegetariano</h2>
@@ -119,7 +119,7 @@
       </div>
       <div class="item">
         <figure>
-          <img src="images/food9.png" alt="producto" />
+          <img src="./images/food9.png" alt="producto" />
         </figure>
         <div class="info-product">
           <h2>Pizza fina(6 porciones)</h2>
