--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <header>
       <div class="menu container">
-        <img class="logo-1" src="images/FGL.jpg" alt="" />
+        <img class="logo-1" src="./images/FGL.jpg" alt="" />
         <input type="checkbox" id="menu" />
         <label for="menu">
-          <img src="images/menu.png" class="menu-icono" alt="" />
+          <img src="./images/menu.png" class="menu-icono" alt="" />
         </label>
         <nav class="navbar">
           <div class="menu-1">
@@ -36,17 +36,17 @@
             <div class="socials">
               <a href="https://www.facebook.com/">
                 <div class="social">
-                  <img src="images/s1.svg" alt="" />
+                  <img src="./images/s1.svg" alt="" />
                 </div>
               </a>
               <a href="https://twitter.com/">
                 <div class="social">
-                  <img src="images/s2.svg" alt="" />
+                  <img src="./images/s2.svg" alt="" />
                 </div>
               </a>
               <a href="https://www.instagram.com/n.xtor?igsh=NzAyaWFub2R6Ymdk">
                 <div class="social">
-                  <img src="images/s3.svg" alt="" />
+                  <img src="./images/s3.svg" alt="" />
                 </div>
               </a>
             </div>
@@ -70,7 +70,7 @@
                   </div>
                 </div>
                 <div class="slider-img">
-                  <img src="images/D01.png" alt="" />
+                  <img src="./images/D01.png" alt="" />
                 </div>
               </div>
             </div>
@@ -88,7 +88,7 @@
                   </div>
                 </div>
                 <div class="slider-img">
-                  <img src="images/slider2.png" alt="" />
+                  <img src="./images/slider2.png" alt="" />
                 </div>
               </div>
             </div>
@@ -106,7 +106,7 @@
                   </div>
                 </div>
                 <div class="slider-img">
-                  <img src="images/slider3.png" alt="" />
+                  <img src="./images/slider3.png" alt="" />
                 </div>
               </div>
             </div>
@@ -136,7 +136,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food1.png" alt="" />
+                    <img src="./images/food1.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>HamburGruesa</h4>
@@ -149,7 +149,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food2.png" alt="" />
+                    <img src="./images/food2.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Tren bala</h4>
@@ -162,7 +162,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food3.png" alt="" />
+                    <img src="./images/food3.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Pan zote</h4>
@@ -193,7 +193,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food4.png" alt="" />
+                    <img src="./images/food4.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Mixto</h4>
@@ -206,7 +206,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food5.png" alt="" />
+                    <img src="./images/food5.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Vegano</h4>
@@ -219,7 +219,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food6.png" alt="" />
+                    <img src="./images/food6.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Marino</h4>
@@ -250,7 +250,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food7.png" alt="" />
+                    <img src="./images/food7.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Fitfast</h4>
@@ -263,7 +263,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food8.png" alt="" />
+                    <img src="./images/food8.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Ranchera</h4>
@@ -276,7 +276,7 @@
                 <div class="product">
                   <div class="product-img">
                     <h4>Nuevo</h4>
-                    <img src="images/food9.png" alt="" />
+                    <img src="./images/food9.png" alt="" />
                   </div>
                   <div class="product-txt">
                     <h4>Pizza fina</h4>
@@ -295,7 +295,7 @@
 
     <section class="info container">
       <div class="info-img">
-        <img src="images/info.png" alt="" />
+        <img src="./images/info.png" alt="" />
       </div>
 
       <div class="info-txt">
@@ -334,17 +334,17 @@
             <div class="socials">
               <a href="https://www.facebook.com">
                 <div class="social">
-                  <img src="images/s1.svg" alt="" />
+                  <img src="./images/s1.svg" alt="" />
                 </div>
               </a>
               <a href="https://twitter.com">
                 <div class="social">
-                  <img src="images/s2.svg" alt="" />
+                  <img src="./images/s2.svg" alt="" />
                 </div>
               </a>
               <a href="https://www.instagram.com/n.xtor?igsh=NzAyaWFub2R6Ymdk">
                 <div class="social">
-                  <img src="images/s3.svg" alt="" />
+                  <img src="./images/s3.svg" alt="" />
                 </div>
               </a>
             </div>
@@ -367,7 +367,7 @@
     </section>
 
     <footer class="footer container">
-      <img class="logo-2" src="images/FGL.jpg" alt="" />
+      <img class="logo-2" src="./images/FGL.jpg" alt="" />
       <div class="links">
         <ul>
           <li><a href="Tyc.html" class="separador-vertical">T y C</a></li>
@@ -381,17 +381,17 @@
         <div class="socials">
           <a href="https://www.facebook.com">
             <div class="social">
-              <img src="images/s1.svg" alt="" />
+              <img src="./images/s1.svg" alt="" />
             </div>
           </a>
           <a href="https://twitter.com">
             <div class="social">
-              <img src="images/s2.svg" alt="" />
+              <img src="./images/s2.svg" alt="" />
             </div>
           </a>
           <a href="https://www.instagram.com/n.xtor?igsh=NzAyaWFub2R6Ymdk">
             <div class="social">
-              <img src="images/s3.svg" alt="" />
+              <img src="./images/s3.svg" alt="" />
             </div>
           </a>
         </div>
